[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elm-alm-py"
version = "0.2.0"
description = "MCP server for IBM Engineering Lifecycle Management (ELM) via OSLC REST API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Claudio Ferreira Filho", email = "filhocf@gmail.com" },
]
keywords = ["mcp", "elm", "oslc", "jazz", "doors-next", "rtc", "etm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
]

[project.scripts]
elm-alm-py = "elm_alm_py.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/elm_alm_py"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["elm_alm_py"]
omit = ["src/elm_alm_py/cli.py"]
